# Act-Operator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_FIX_PROMPT.md  CLAUDE_SKILLS_ANALYSIS_PROMPT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  CONTRIBUTING_KR.md  MANIFEST.in  README.md  README_EN.md  README_KR.md  SKILLS_FEEDBACK_REPORT.md  pyproject.toml
act_operator/: LICENSE  README.md  pyproject.toml
act_operator/act_operator/: cli.py  utils.py
act_operator/act_operator/scaffold/: cookiecutter.json
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/: .pre-commit-config.yaml  README.md  TEMPLATE_README.md  drawkit.xml  drawkit_en.xml  drawkit_kr.xml  pyproject.toml
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/act-architect/: CHANGELOG.md  DECISIONS.md  SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/act-architect/.claude-plugin/: marketplace.json
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/act-engineer/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/act-quickstart/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/act-setup/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/advanced-patterns/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/architecting-act/: CHANGELOG.md  DECISIONS.md  README.md  SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/cast-developer/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/cast-development/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/cast-tester/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/code-quality/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/developing-cast/: SKILL.md  analysis-architecture.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/engineering-act/: README.md  SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/graph-composition/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/modules-integration/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/node-implementation/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/runtime-operations/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/state-management/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/testing-cast/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/testing-debugging/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.claude/skills/versioning-act/: SKILL.md
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/.github/workflows/: pr_lint.yml  ruff.yml  uv_lock_upgrade.yml
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/casts/: base_graph.py  base_node.py
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/casts/{{ cookiecutter.cast_snake }}/: README.md  graph.py  pyproject.toml  state.py
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/casts/{{ cookiecutter.cast_snake }}/modules/: agents.py  conditions.py  middlewares.py  models.py  nodes.py  state.py  tools.py  utils.py
act_operator/act_operator/scaffold/{{ cookiecutter.act_slug }}/tests/integration_tests/: test_cast.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/: .pre-commit-config.yaml  README.md  TEMPLATE_README.md  langgraph.json  pyproject.toml
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/.cursor/rules/: uv.mdc
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/casts/: base_graph.py  base_node.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/casts/{{ cookiecutter.cast_slug }}/: __init__.py  pyproject.toml  workflow.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/casts/{{ cookiecutter.cast_slug }}/modules/: chains.py  conditions.py  prompts.py  state.py  tools.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/casts/{{ cookiecutter.cast_snake }}/: README.md  __init__.py  graph.py  workflow.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/casts/{{ cookiecutter.cast_snake }}/modules/: agents.py  models.py  nodes.py  prompts.py  state.py  utils.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/tests/integration_tests/: test_cast.py
act_operator/act_operator/scaffold/{{ cookiecutter.project_dir }}/tests/unit_tests/: test_node.py
act_operator/act_operator/tests/integration_tests/: test_cli.py
act_operator/new/: .gitignore  README.md  TEMPLATE_README.md  langgraph.json  pyproject.toml
act_operator/new/casts/: base_node.py
act_operator/new/casts/new_enw/: README.md  __init__.py  graph.py  pyproject.toml
act_operator/new/casts/new_enw/modules/: agents.py  chains.py  conditions.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
act_operator/new/tests/integration_tests/: test_cast.py
act_operator/new/tests/unit_tests/: test_node.py
act_operator/rrr/: README.md  langgraph.json  pyproject.toml
act_operator/rrr/casts/: base_node.py  base_workflow.py
act_operator/rrr/casts/rrrr/: README.md  __init__.py  pyproject.toml  workflow.py
act_operator/rrr/casts/rrrr/modules/: chains.py  conditions.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
new/: README.md  langgraph.json  pyproject.toml
new/casts/newone/: README.md  __init__.py  pyproject.toml  workflow.py
new/casts/newone/modules/: chains.py  conditions.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
(+284 files in other folders)
