[project]
name = "{{ cookiecutter.act_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.act_name }}"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "pre-commit>=4.3.0",
    "langgraph-api>=0.4.46",
    "langgraph-cli[inmem]>=0.4.3",
]
test = [
    "pytest>=8.4.2",
]

[tool.pyright]
include = ["casts", "tests"]
exclude = ["**/__pycache__/*", "**/node_modules/*", ".venv", "**/.venv"]

[tool.uv.workspace]
members = ["casts/{{ cookiecutter.cast_snake }}"]

[tool.ruff]
exclude = [
    "(^|/)(.venv|venv|node_modules|__pycache__|migrations|static|templates|.git|.github|.langgraph_api|media)(/|$)",
    "^tests(/|$)",
    "^unit_tests(/|$)",
    ".env",
    ".env.example",
    ".gitignore",
    "LICENSE",
    "README.md",
    "langgraph.json",
    "uv.lock"
]
