[project]
name = "{{ cookiecutter.act_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.act_name }}"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "langgraph-cli[inmem]>=0.4.3",
    "pytest>=8.4.2",
    "ruff>=0.5.7",
]

[tool.pyright]
include = ["casts", "tests"]
exclude = [
    "**/__pycache__/*", 
    ".venv", 
    "**/.venv"
]

[tool.uv.workspace]
members = ["casts/*"]
exclude = [
    "casts/__pycache__",
    "casts/**/__pycache__",
    "casts/**/.venv",
]

[tool.ruff]
exclude = [
    "(^|/)(.venv|venv|node_modules|__pycache__|.pytest_cache|.ruff_cache|migrations|static|templates|.git|.github|.langgraph_api|media)(/|$)",
    "^tests(/|$)",
    "^unit_tests(/|$)",
    ".env",
    ".env.example",
    ".gitignore",
    "LICENSE",
    "README.md",
    "langgraph.json",
    "uv.lock"
]
lint.select = [
    "E",
    "F",
    "I",
    "B",
]
lint.ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B905"]